# Bebop-Autonomy-Vision

./: .gitignore  README.md  bebop_object_detection.py  bebop_semantic_segmentation.py  code.MD  csci_dronet.py
bebop_ws/src/bebop_autonomy/bebop_driver/config/: outdoor.yaml
bebop_ws/src/bebop_autonomy/bebop_driver/launch/: bebop_node.launch  bebop_nodelet.launch
bebop_ws/src/dronet_perception/: CMakeLists.txt  package.xml
bebop_ws/src/dronet_perception/src/Dronet/: Dronet.py
bebop_ws/src/rpg_svo/svo_ros/launch/: live.launch
bebop_ws/src/rpg_svo/svo_ros/param/: my_camera.yaml
